[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/open-sans/open-sans-bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui-theme.tres" type="Theme" id=2]
[ext_resource path="res://src/gui/menu/menu.gd" type="Script" id=3]
[ext_resource path="res://assets/footer_labels_font.tres" type="DynamicFont" id=4]

[sub_resource type="Shader" id=1]
code = "// From https://godotshaders.com/shader/vaporwave-grid/

shader_type canvas_item;

uniform float battery : hint_range(0.0,1.0) = 1.0;
uniform float anchor : hint_range(-1.0,1.0) = -0.5;
uniform float speed_scale : hint_range(1.0, 10.0) = 1.0;
uniform float fov : hint_range(0.01, 1.0) = 0.2;
uniform vec4 background_color : hint_color = vec4(0.0, 0.1, 0.2, 1.0);
uniform vec4 grid_color : hint_color = vec4(1.0, 0.5, 1.0, 1.0);

float grid(vec2 uv, float batt, float time) {
    vec2 size = vec2(uv.y, uv.y * uv.y * 0.2) * 0.01;
    uv += vec2(0.0, time * speed_scale * (batt + 0.05));
    uv = abs(fract(uv) - 0.5);
 	vec2 lines = smoothstep(size, vec2(0.0), uv);
 	lines += smoothstep(size * 5.0, vec2(0.0), uv) * 0.4 * batt;
    return clamp(lines.x + lines.y, 0.0, 3.0);
}

void fragment() {
	vec2 uv = UV;
	vec4 col = background_color;
    uv.y = 3.0 / (abs(uv.y + fov) + 0.05);
	uv.x += anchor;
    uv.x *= uv.y * 1.0;
    float gridVal = grid(uv, battery, TIME);
    col = mix(background_color, grid_color, gridVal);
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/battery = 1.0
shader_param/anchor = -0.5
shader_param/speed_scale = 1.0
shader_param/fov = 0.2
shader_param/background_color = Color( 0, 0.1, 0.2, 1 )
shader_param/grid_color = Color( 1, 0.5, 1, 1 )

[sub_resource type="DynamicFont" id=3]
size = 62
outline_size = 6
outline_color = Color( 0.501961, 0, 1, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=4]
script/source = "extends Label


"

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.447059, 0.219608, 0.501961, 1 )

[node name="Header" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
margin_bottom = -339.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Header"]
margin_left = 315.0
margin_top = 87.0
margin_right = 709.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 3 )
text = "Breezy Wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -34.0
margin_right = 100.0
margin_bottom = 130.0
custom_constants/separation = 16

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 70 )
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 200.0
margin_bottom = 156.0
rect_min_size = Vector2( 200, 70 )
focus_neighbour_top = NodePath("../PlayButton")
focus_previous = NodePath("../PlayButton")
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -90.0
margin_right = 198.0
margin_bottom = -18.0
alignment = 2

[node name="GameVersion" type="Label" parent="Version"]
margin_top = 22.0
margin_right = 182.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 4 )
text = "<x.y.z>"

[node name="GodotVersion" type="Label" parent="Version"]
margin_top = 49.0
margin_right = 182.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.92549, 0.92549, 0.92549, 1 )
text = "<GodotVersion>"
script = SubResource( 4 )

[node name="Credits" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -147.0
margin_top = -90.0
margin_right = -16.0
margin_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="MadeByLabel" type="Label" parent="Credits"]
margin_top = 24.0
margin_right = 131.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Game by:"
align = 2

[node name="Developer1" type="Label" parent="Credits"]
margin_top = 51.0
margin_right = 131.0
margin_bottom = 74.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.92549, 0.92549, 0.92549, 1 )
text = "jayypluss"
align = 2

[node name="Developer2" type="Label" parent="Credits"]
visible = false
margin_top = 76.0
margin_right = 135.0
margin_bottom = 110.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.886275, 0.87451, 0.87451, 1 )
text = "Developer 2"
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
